[tool.poetry]
name = "async-chain"
version = "0.1.0"
description = ""
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
