[tool.poetry]
name = "async-chain"
version = "0.1.1"
description = "A coroutine builder"
authors = ["Stefano Pigozzi <me@steffo.eu>"]
license = "LGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Steffo99/async-chain"
documentation = "https://github.com/Steffo99/async-chain/blob/main/README.md"
keywords = ["asyncio"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Framework :: AsyncIO",
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
